# terminus-config

./: .gitignore  .ps4-games.709E297669B4_80f5.json  AGENTS.md  CLAUDE.md  README.md  automations.yaml  configuration.yaml  scenes.yaml  secrets.yaml.example
.claude/: settings.json
.superpowers/: hotfix-report.md
addons/terminus/: .dockerignore  .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  build.yaml  config.yaml  dev.sh
addons/terminus-copilot/: .dockerignore  Dockerfile  README.md  config.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
addons/terminus-langchain/: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  build.yaml  config.yaml  dev.sh  run.sh
addons/terminus-langchain/backend/: langgraph.json  pyproject.toml
addons/terminus-langchain/backend/app/: agent.py  config.py  ha_client.py  ha_registry.py  mcp_client.py  title.py  tools.py  web.py
addons/terminus-langchain/backend/tests/: test_agent.py  test_config.py  test_ha_client.py  test_ha_registry.py  test_mcp_integration.py  test_proxy.py  test_title.py  test_tools.py  test_web.py
addons/terminus-rag/: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  config.yaml  dev.sh  run.sh
addons/terminus-rag/backend/: .gitignore  pyproject.toml
addons/terminus-rag/backend/app/: config.py  embedder.py  ha_source.py  history.py  index.py  main.py  mcp_app.py  playground.py  records.py  refresher.py
addons/terminus-rag/backend/tests/: conftest.py  test_config.py  test_embedder.py  test_ha_source.py  test_history.py  test_index.py  test_main.py  test_mcp_app.py  test_playground.py  test_records.py  test_refresher.py  test_scaffold.py
custom_templates/: is_dark.jinja
dashboard/: .env.example  README.md  components.json  package.json  pnpm-lock.yaml
docs/: areas.md
docs/automations/: README.md  abi.md  illuminance.md  kitchen.md  living_room.md  master_bedroom.md  night_walk.md  notifications.md  presence.md  schedule.md
terminus/: .gitignore  AGENTS.md  CLAUDE.md  README.md  components.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite-plugin-graph.test.ts  vite-plugin-graph.ts  vite.config.ts  vitest.config.ts
terminus-agent/: .env.example
terminus-agent/src/: agent.ts  graph.ts  index.ts
terminus-dashboard/: README.md  package.json  tsconfig.node.json  vite-plugin-graph.ts  vite.config.ts
terminus-dashboard/__fixtures__/: automations.yaml  scripts.yaml
terminus-dashboard/src/: index.css
terminus/public/: graph.json
terminus/src/: App.tsx  main.tsx
www/my-dashboard/: index.js
www/terminus/: andromeeda-CRrAmgqf.js  angular-html-BoIKMHMf.js  angular-html-CBq2T1xZ.js  angular-ts-C4-oufZr.js  angular-ts-gSFYAgcE.js  apl-Diu8wULG.js  apl-pvDMq3RX.js  arc-DgSvxNdD.js  arc-sowdMk1h.js  architecture-7EHR7CIX-BQ8_WXSe.js  architectureDiagram-3BPJPVTR-DWUETImM.js  architectureDiagram-3BPJPVTR-tTfrQloY.js  astro-CChFNNpm.js  astro-De-Vp9Ps.js  aurora-x-Cp9ws7Bn.js  bird2-BUfgFdWV.js  (+366 more)
(+539 files in other folders)
