[project]
name = "terminus-langchain"
version = "0.3.8"
description = "Terminus LangChain Home Assistant add-on backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "websockets>=14",
    "langchain>=1.0",
    "langgraph>=1.0",
    "langchain-anthropic>=1.0",
]

[project.optional-dependencies]
server = [
    "langgraph-cli[inmem]>=0.4",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
